# facilita-rio

./: .dockerignore  .env.example  .env.hostinger.example  .gitignore  AGENTS.md  CLAUDE.md  DEPLOY.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  servicos_selecionados.json
.agents/skills/: prompt-architect
.claude/: CLAUDE.md
.codex/: config.toml  hooks.json
.github/workflows/: deploy.yml
.make/: shared.mk
app/: config.py  main.py  models.py
app/data/: citizen_journeys.json  synonyms.json
app/indexing/: bm25_index.py  cluster_builder.py  loader.py  vector_index.py
app/observability/: __init__.py  logging.py  metrics.py
app/recommendation/: recommender.py
app/routers/: api.py  pages.py
app/search/: hybrid.py  pipeline.py  query_processor.py  reranker.py
app/templates/: base.html  search.html  service_detail.html
evaluation/: benchmark_scale.py  ce_sweep.py  check_regression.py  evaluate.py  failure_analysis.py  holdout.py  holdout_queries.json  latency.py  popular.py  queries_populares.json  rec_queries.json  recommendations.py  semantic_weight_sweep.py  shared.py  test_queries.json  variants.py
tests/: conftest.py  test_api.py  test_evaluation.py  test_llm_fallback.py  test_loader.py  test_pipeline_quality.py  test_properties.py  test_recommendation.py  test_search.py
